# vcglib_samples

./: .gitignore  LICENSE  Qt.cmake  README.md  general.cmake  meshlab.cmake  opt.cmake  vs.cmake
001_open_3dfile/: CMakeLists.txt  main.cpp
002_save_ply/: main.cpp
003_set_ply_col_and_val/: 003_set_ply_col_and_val.pro  main.cpp
004_create_ply/: main.cpp
005_1ring_neighborhood/: main.cpp
005m_1ring_neighborhood/: main.cpp
006_VFItr_sample/: main.cpp
007_ocf_optional_attr/: main.cpp
008_curvature/: main.cpp
008m_curvature/: main.cpp
009m_curvature_colorize/: main.cpp
010m_clean_non_manifold/: main.cpp
011m_select_border/: main.cpp
012m_rotate_border/: CMakeLists.txt  main.cpp
013m_create_mesh_pivot/: main.cpp
014_vcg_QGLWidget/: CMakeLists.txt  MeshViewerWidget.cc  MeshViewerWidget.hh  MeshViewerWidgetT.hh  MeshViewerWidgetT_impl.hh  QGLViewerWidget.cc  QGLViewerWidget.hh  meshviewer.cc
014_vcg_QOpenGL/: CMakeLists.txt  cmake_conf.bat  widget.cpp  widget.h
015_attr_sample/: main.cpp
016m_boundary_line/: main.cpp
017m_boundary_line/: main.cpp
018m_QGLWidget/: CMakeLists.txt  _widget.cpp  _widget.h  main.cpp  widget.cpp  widget.h
019m_QGLWidget/: widget.cpp  widget.h
020_trackball/: widget.cpp  widget.h
021_trackball_mesh/: CMakeLists.txt  widget.cpp  widget.h
022_trackball_mesh_pick/: widget.cpp  widget.h
023_add_vert_face/: main.cpp
024_translate_obj/: CMakeLists.txt
025m_select_edge/: CMakeLists.txt  main.cpp
026m_quaternion/: CMakeLists.txt  main.cpp
@template/: CMakeLists.txt  main.cpp
HowToUse_001_dataAccess_itr/: CMakeLists.txt  main.cpp
sample_data/: dodecahedron.ply  icosahedron.ply  octahedron.3ds  octahedron.off  octahedron.ply  octahedron.stl  octahedron_bin.ply  stanford_bunny.ply  stanford_bunny_bin.ply
samples/@template/: README.md  main.cpp
samples/_template/: CMakeLists.txt  main.cpp
samples/add_del_vert_face/: README.md  main.cpp
samples/adjacent/: CMakeLists.txt  README.md  main.cpp
samples/angle_two_vector/: README.md  main.cpp
samples/conv_deg_and_rad/: README.md  main.cpp
samples/copy_mesh/: README.md  main.cpp
samples/create_mesh_manually/: CMakeLists.txt  README.md  main.cpp
samples/create_preset_obj/: CMakeLists.txt  README.md  main.cpp
samples/curvature/: CMakeLists.txt  main.cpp
samples/dist_point_line/: README.md  main.cpp
samples/dist_point_plane/: CMakeLists.txt  README.md  main.cpp
samples/dist_two_points/: README.md  main.cpp
samples/expand_select/: README.md  main.cpp
samples/flags/: README.md  main.cpp
samples/hello_mesh/: CMakeLists.txt  README.md  main.cpp
samples/iterator/: README.md  main.cpp
samples/matrix_with_eigen/: README.md  main.cpp
samples/ply_with_vert_value/: README.md  main.cpp
samples/quaternion/: README.md  main.cpp
samples/read_write_file/: CMakeLists.txt  README.md  main.cpp
samples/remove_non_manifold/: README.md  main.cpp
samples/set_color/: CMakeLists.txt  README.md  main.cpp
samples/simplification/: CMakeLists.txt  README.md  main.cpp  quadric_simp.cpp  quadric_simp.h
samples/subdivision/: CMakeLists.txt  README.md  main.cpp
samples/template/: README.md
samples/template_meshlab/: CMakeLists.txt  main.cpp
samples/template_pybind/: CMakeLists.txt  README.md  main.cpp  out.ply
samples/transformation_matrix/: README.md  main.cpp
samples/user_defined_attr/: README.md  main.cpp
template/: main.cpp
